Apply protocol-relative URLs to repository

--- a/stats/templates/stats/mosquito_ccaa_rich.html
+++ b/stats/templates/stats/mosquito_ccaa_rich.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
 
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/map.js"></script>
-        <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
+        <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/maps/modules/map.js"></script>
+        <script src="//code.highcharts.com/mapdata/countries/es/es-all.js"></script>
         <script src={% static "stats/mosquito_ccaa_rich.js" %}></script>
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
