--- a/stats/templates/stats/mosquito_ccaa_rich_iframetest.html
+++ b/stats/templates/stats/mosquito_ccaa_rich_iframetest.html
@@ -14,7 +14,7 @@
                 color: red;
             }
         </style>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src={% static "stats/isotope.pkgd.min.js" %}></script>
         <script src={% static "stats/mosquito_ccaa_rich_iframetest.js" %}></script>
     </head>
