--- a/stats/templates/stats/report_stats_ccaa.html
+++ b/stats/templates/stats/report_stats_ccaa.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
         <link rel="stylesheet" href={% static "stats/workload.css" %}>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://code.highcharts.com/maps/highmaps.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//code.highcharts.com/maps/highmaps.js"></script>
         <script src={% static "stats/underscore-min.js" %}></script>
         <script src={% static "stats/geojson_ccaa.js" %}></script>
         <script src={% static "stats/report_stats_ccaa.js" %}></script>
