--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -1346,8 +1346,8 @@ function map_init_basic(map, options) {
 
 
                 var djoptions = {"layers": [
-                            ["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                                "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
+                            ["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                                "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                         ],
                             "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                             "attributionprefix": null, "zoom": initialZoom, "maxzoom": max_zoom, "minzoom": min_zoom, "extent": bounds_array, "resetview": true, "srid": null, "fitextent": true},
