--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -10,15 +10,15 @@
         <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
         <link rel="stylesheet" href="{% static 'stats/workload.css' %}">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/map.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/data.js"></script>
-        <!--<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>-->
-        <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
+        <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/maps/modules/map.js"></script>
+        <script src="//code.highcharts.com/maps/modules/data.js"></script>
+        <!--<script src="//code.highcharts.com/maps/modules/exporting.js"></script>
+        <script src="//code.highcharts.com/maps/modules/offline-exporting.js"></script>-->
+        <script src="//code.highcharts.com/mapdata/countries/es/es-all.js"></script>
         <script src="{% static 'stats/isotope.pkgd.min.js' %}"></script>
 
         <script src="{% static 'stats/underscore-min.js' %}"></script>
