--- a/stats/templates/stats/speedmeter.html
+++ b/stats/templates/stats/speedmeter.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
         <link rel="stylesheet" href={% static "stats/mosquito_ccaa_rich_iframetest.css" %}>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/highcharts-more.js"></script>
-        <script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+        <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/highcharts-more.js"></script>
+        <script src="//code.highcharts.com/modules/solid-gauge.js"></script>
         <script src={% static "stats/isotope.pkgd.min.js" %}></script>
         <script src={% static "stats/speedmeter.js" %}></script>
         <script>
