--- a/stats/templates/stats/user_activity.html
+++ b/stats/templates/stats/user_activity.html
@@ -10,10 +10,10 @@
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
         <link rel="stylesheet" href={% static "stats/user_activity.css" %}>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/modules/series-label.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/modules/series-label.js"></script>
         <script src={% static "stats/underscore-min.js" %}></script>
         <script src={% static "stats/user_activity.js" %}></script>
         <script>
