--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -103,8 +103,8 @@
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     {% endblock %}
 
@@ -1265,8 +1265,8 @@
                     var centerLng = {{ form.instance.report.lon }};
                     var initialZoom = 6;
                     var djoptions = {"layers": [
-                                ["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                                    "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
+                                ["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                                    "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                             ],
                                 "minimap": true, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                                 "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
