--- a/tigacrafting/templates/tigacrafting/validated_photos.html
+++ b/tigacrafting/templates/tigacrafting/validated_photos.html
@@ -28,8 +28,8 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     {% endblock %}
 
@@ -174,8 +174,8 @@
                 var centerLng = {{ task.lon }};
                 var initialZoom = 6;
                 var djoptions = {"layers": [
-                            ["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                                "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
+                            ["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                                "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                         ],
                             "minimap": true, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                             "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
