--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -190,8 +190,8 @@ function removeMe(){
 				}
 
 
-        var djoptions = {"layers": [["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                    "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]],
+        var djoptions = {"layers": [["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                    "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]],
                     "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                     "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [[-90,
                         -180], [90,
