--- a/tigaserver_app/templates/swagger.html
+++ b/tigaserver_app/templates/swagger.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="swagger-ui"></div>
-    <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js" charset="UTF-8"></script>
+    <script src="//unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js" charset="UTF-8"></script>
     <script>
     const ui = SwaggerUIBundle({
         url: "{% static "tigaserver_app/schema-v1.yaml" %}",
